--- a/k6.md
+++ b/k6.md
@@ -353,29 +353,32 @@ Las pruebas de k6 nos permitieron medir tres sub-características:
 
 Medimos la latencia en diferentes percentiles:
 
-$$P_{95} = 50ms$$
+$$P_{95} = 198.54ms$$
 
-Esto significa que el 95% de los usuarios experimentan tiempos de respuesta menores a 50ms, cumpliendo ampliamente nuestro SLO.
+Esto significa que el 95% de los usuarios experimentan tiempos de respuesta menores a 198.54ms, cumpliendo nuestro SLO de < 500ms con un margen confortable del 60%.
 
 **b) Utilización de Recursos (Resource Utilization)**
 
 Calculamos el throughput del sistema:
 
-$$Throughput = \frac{150,000 \text{ peticiones}}{50 \text{ segundos}} = 3,000 \text{ req/s}$$
+$$Throughput = \frac{356,518 \text{ peticiones}}{51 \text{ segundos}} \approx 6,990 \text{ req/s}$$
+
+Este throughput de ~7,000 req/s demuestra que el sistema puede manejar una carga significativa, más del doble de lo estimado inicialmente.
 
 **c) Capacidad (Capacity)**
 
 Determinamos que el sistema puede soportar al menos 10,000 usuarios concurrentes manteniendo:
-- Latencia p95 < 500ms
-- Tasa de errores < 1%
+- Latencia promedio: 47.1ms
+- Latencia p95: 198.54ms (< 500ms threshold)
+- Tasa de errores: 0% (< 1% threshold)
 
 #### **2. Fiabilidad (Reliability)**
 
 La fiabilidad se mide como la proporción de peticiones exitosas:
 
-$$Fiabilidad = \frac{Peticiones_{exitosas}}{Peticiones_{totales}} \times 100\% = \frac{150,000}{150,000} \times 100\% = 100\%$$
+$$Fiabilidad = \frac{Peticiones_{exitosas}}{Peticiones_{totales}} \times 100\% = \frac{356,518}{356,518} \times 100\% = 100\%$$
 
-Esto indica alta fiabilidad del sistema bajo carga.
+Con 356,518 peticiones exitosas y 0 fallos, esto indica una fiabilidad perfecta del sistema bajo carga extrema.
 
 #### **3. Disponibilidad**
 
@@ -383,7 +386,7 @@ La disponibilidad observada durante las pruebas fue:
 
 $$Disponibilidad = \frac{MTBF}{MTBF + MTTR}$$
 
-Con 0 fallos durante las pruebas, MTTR = 0, lo que resulta en disponibilidad del 100%.
+Con 0 fallos durante las 356,518 peticiones, MTTR = 0, lo que resulta en disponibilidad del 100%.
 
 ### **Tipos de Pruebas de Carga**
 
@@ -430,11 +433,19 @@ Donde:
 - $\lambda$ = Throughput (peticiones/segundo)
 - $W$ = Latencia promedio (segundos)
 
-En nuestro caso:
-$$10,000 = \lambda \times 0.016$$
-$$\lambda_{teórico} = 625,000 \text{ req/s}$$
+En nuestro caso, verificamos la relación con nuestros datos reales:
 
-El throughput real (3,000 req/s) es menor debido al `sleep(1)` que introducimos intencionalmente.
+$$\lambda = \frac{L}{W} = \frac{10,000}{0.0471} \approx 212,300 \text{ req/s teóricos}$$
+
+El throughput real obtenido fue de 6,990 req/s. Esta diferencia se debe al `sleep(1)` que introducimos intencionalmente en cada iteración, que limita artificialmente la tasa de peticiones para simular el comportamiento de usuarios reales que esperan entre acciones.
+
+Si consideramos el `sleep(1)`:
+
+$$Tiempo_{total\_iteración} = W + sleep = 0.0471s + 1s = 1.0471s$$
+
+$$\lambda_{real} = \frac{10,000}{1.0471} \approx 9,550 \text{ req/s teóricos}$$
+
+Nuestro throughput real de 6,990 req/s es aproximadamente el 73% del teórico, lo cual es razonable considerando la rampa de subida/bajada y las variaciones de red.
 
 ### **Percentiles de Latencia**
 
@@ -445,27 +456,35 @@ Los percentiles nos dan una mejor imagen de la experiencia del usuario que el pr
 - **p(95)**: Métrica común para SLOs
 - **p(99)**: Captura outliers y edge cases
 
-En nuestras pruebas:
-- p(50) = 10ms
-- p(90) = 25ms
-- p(95) = 50ms
-- p(99) = ~100ms
+En nuestras pruebas obtuvimos:
+- **Promedio**: 47.1ms
+- **Mediana p(50)**: 11.01ms
+- **p(90)**: 150.63ms
+- **p(95)**: 198.54ms
+- **Máximo**: 760.59ms
 
-Esto muestra una distribución muy consistente con pocos outliers.
+Análisis de la distribución:
+- La mediana (11.01ms) es muy inferior al promedio (47.1ms), indicando que la mayoría de peticiones son muy rápidas
+- Solo el 5% de las peticiones superan los 198.54ms
+- Incluso el peor caso (760.59ms) está dentro del rango aceptable
+- La distribución muestra que el sistema maneja bien la carga, con la mayoría de usuarios experimentando latencias excelentes
 
 ### **SLIs, SLOs y SLAs**
 
 Los thresholds de k6 se mapean directamente a estos conceptos:
 
 - **SLI** (Service Level Indicator): La métrica real medida
-  - Ejemplo: `http_req_duration p(95) = 50ms`
+  - Ejemplo obtenido: `http_req_duration p(95) = 198.54ms`
   
 - **SLO** (Service Level Objective): El objetivo interno
-  - Ejemplo: `p(95) < 500ms`
+  - Ejemplo configurado: `p(95) < 500ms`
+  - **Estado**: ✅ Cumplido con 60% de margen
   
 - **SLA** (Service Level Agreement): El contrato con clientes
   - Ejemplo: "99.9% de disponibilidad mensual"
+  - **Estado**: ✅ Superado (100% de disponibilidad en el test)
 
+El cumplimiento de los SLOs con margen amplio (198.54ms vs 500ms threshold) indica que el sistema está sobredimensionado para la carga actual, lo cual es positivo para futuros crecimientos de tráfico.
 ---
 
 ## 🐛 Problemas Encontrados y Soluciones
